--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/clock.ico" type="image/x-icon">
-    <title>Digital Clock</title>
+    <title>Digital Clock USA</title>
 </head>
 
 <body>
